# halo

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  go.mod  makefile
cmd/: main.go
src/: main.c  root.h
src/inc/config/: settings.c
src/inc/net/: http.c
src/lib/config/: settings.h
src/lib/net/: http.h
